# GRender

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  License.txt  README.md  help  polyConnections.vtx.glsl
GRender/: CMakeLists.txt  README.md
GRender/include/: GRender.h  application.h  camera.h  camera2D.h  core.h  dialog.h  entryPoint.h  events.h  eventsWrapper.h  fonts.h  framebuffer.h  mailbox.h  quad.h  shader.h  table.h  texture.h
GRender/include/GRender/: application.h  camera.h  core.h  dialog.h  entryPoint.h  eventsWrapper.h  fonts.h  framebuffer.h  interactiveImage.h  mailbox.h  quad.h  shader.h  storageBuffer.h  texture.h  viewport.h
GRender/include/GRender/objects/: cylinder.h  object.h  sphere.h
GRender/src/: application.cpp  camera.cpp  dialog.cpp  events.cpp  fonts.cpp  framebuffer.cpp  interactiveImage.cpp  mailbox.cpp  orbitalCamera.cpp  quad.cpp  shader.cpp  texture.cpp  utils.cpp  viewport.cpp
GRender/src/internal/: OpenSans.cpp  dialogImpl.cpp  dialogImpl.h  fontsImpl.cpp  fontsImpl.h
GRender/src/objects/: cube.cpp  cylinder.cpp  object.cpp  sphere.cpp
Template/: CMakeLists.txt  circle.cpp  circle.h  polymer copy.cpp  polymer copy.h  polymer.cpp  polymer.h  template.cpp
Template/assets/: circleShader.vtx.glsl  quadShader.frag.glsl  quadShader.vtx.glsl
assets/: compute.cmp.glsl  layout.ini  objects.frag.glsl  objects.vtx.glsl  polyBlobs.vtx.glsl  polyConnections.vtx.glsl  polyShader.frag.glsl  quad.frag.glsl  quad.vtx.glsl
example/: CMakeLists.txt  polymer.cpp  polymer.h  template.cpp
example/assets/: layout.ini  objects.vtx.glsl  quad.frag.glsl  quad.vtx.glsl
include/: application.h  camera.h  core.h  dialog.h  entryPoint.h  events.h  eventsWrapper.h  fonts.h  framebuffer.h  grender.h  quad.h  renderer.h  shader.h  texture.h  window.h
include/GRender/: application.h  camera.h  computeShader.h  core.h  dialog.h  entryPoint.h  events.h  interactiveImage.h  mailbox.h  orbitalCamera.h  quad.h  shader.h  shaderUtils.h  storageBuffer.h  table.h  utils.h
include/GRender/objects/: cube.h  object.h
src/: application.cpp  camera.cpp  camera2D.cpp  computeShader.cpp  dialog.cpp  events.cpp  fonts.cpp  framebuffer.cpp  interactiveImage.cpp  mailbox.cpp  orbitalCamera.cpp  quad.cpp  renderer.cpp  shader.cpp  storageBuffer.cpp  texture.cpp
src/internal/: dialogImpl.cpp  dialogImpl.h  fontsImpl.cpp  fontsImpl.h
src/objects/: cylinder.cpp  object.cpp  sphere.cpp
test/: CMakeLists.txt  template.cpp
test/assets/: quadShader.frag.glsl  quadShader.vtx.glsl
